[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-spatial"
version = "0.1.0"
description = "A lightweight Python library for 3D spatial transformations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Haoyan Li", email = "haoyan.li@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["spatial", "transformations", "3d", "robotics", "quaternion", "rotation", "pose"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
robotics = [
    # Note: pinocchio should be installed via conda-forge:
    # conda install -c conda-forge pinocchio
    "viser>=0.2.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "mypy>=0.800",
]
all = [
    "viser>=0.2.0",
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/haoyan-ts/ts-spatial"
Repository = "https://github.com/haoyan-ts/ts-spatial.git"
Documentation = "https://github.com/haoyan-ts/ts-spatial#readme"
"Bug Tracker" = "https://github.com/haoyan-ts/ts-spatial/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ts_spatial*"]

[tool.setuptools.package-dir]
"ts_spatial" = "ts_spatial"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
